[gd_scene load_steps=5 format=3 uid="uid://dvuwy3cfdlgpw"]

[ext_resource type="Script" path="res://minigun.gd" id="1_xumlg"]
[ext_resource type="Texture2D" uid="uid://c3bg2gftfwtfn" path="res://assets/DzJMF3 (1)-Photoroom фвцфвфцвц(1)(3).png" id="2_fh7rt"]
[ext_resource type="Texture2D" uid="uid://bjbcnhv8n5qgj" path="res://assets/bullets/Bullet 24x24 Free Part 3A.png" id="2_i74wu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n0sye"]
atlas = ExtResource("2_i74wu")
region = Rect2(386, 7, 19, 10)

[node name="minigun" type="Node2D"]
script = ExtResource("1_xumlg")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1.6, 0)
scale = Vector2(0.0843659, 0.124365)
texture = ExtResource("2_fh7rt")
region_enabled = true
region_rect = Rect2(470, 371, 356, 38)

[node name="RayCast2D" type="RayCast2D" parent="." groups=["weapon"]]
position = Vector2(-6.4, 0)
target_position = Vector2(1000, 0)
collision_mask = 3

[node name="MuzzleFlash" type="Sprite2D" parent="." groups=["weapon"]]
visible = false
position = Vector2(17, -0.200006)
scale = Vector2(0.34, 0.34)
texture = SubResource("AtlasTexture_n0sye")

[node name="Timer" type="Timer" parent="MuzzleFlash" groups=["weapon"]]
wait_time = 0.05
autostart = true

[node name="shootSpeedTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(13, 0)

[connection signal="timeout" from="MuzzleFlash/Timer" to="MuzzleFlash" method="hide"]
[connection signal="timeout" from="shootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]
